--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.2.6",
     "pg": "^8.7.3",
     "socket.io": "^4.5.1"
   },
